# robotmoose

./: .gitignore  DEPLOYMENT.md  LICENSE.txt  Makefile  README.md  README.txt  TODO  TTD  doorways_ttd  fix_dell_d630_wireless.sh  fix_permissions.sh  ideal_lesson_plan  ignore_me  student_laptops.sh  update_git.sh
3d_printer/: MakerWare.ini
3d_printer/replicator_dual/: miracle.json
BMS/: BMS.ino
BMS/BMS/: BMS.ino
BMS/BMS_testing/: BMS_testing.ino
BMS/I2C_Master/: I2C_Master.ino
BMS/PSpice/: BMS_V2_0.DBK  BMS_v2.dsn  BMS_v2.opj
BMS/firmware/: firmware.ino  percentage.h
BMS/firmware_test/: battery.h  firmware_test.ino
Create2/: Creat2COI.h  README.txt  SoftwareServo.h  create2.ino
Eagle/: DESCRIPTION
Eagle/BMS/: DESCRIPTION  LTC6803 breakout.brd  LTC6803 breakout.sch  Newark_ShopCart.csv  battery_monitor_6803-2 -no_uno.brd  battery_monitor_6803-2_Rev1.sch  battery_monitor_6803-2_Rev2.b#1  battery_monitor_6803-2_Rev2.brd  battery_monitor_6803-2_Rev3-newark.csv  battery_monitor_6803-2_Rev3-newark.xlsx  battery_monitor_6803-2_Rev3-order.xlsx  battery_monitor_6803-2_Rev3.brd  battery_monitor_6803-2_Rev3.sch  battery_monitor_6803-2_Rev3_Rev4-bom.xlsx  battery_monitor_6803-2_Rev4-newark.xlsx  battery_monitor_6803-2_Rev4-order.xlsx  battery_monitor_6803-2_Rev4-uno_shield.brd  battery_monitor_6803-2_Rev4.b##  battery_monitor_6803-2_Rev4.brd  battery_monitor_6803-2_Rev4.s##  battery_monitor_6803-2_Rev4.sch  battery_monitor_6803-2_Rev5.brd  battery_monitor_6803-2_Rev5.sch  battery_monitor_6803-2_Rev6.brd  battery_monitor_6803-2_Rev6.sch  eagle.epf
Eagle/Encoders/: .mag_encoder_Rev3_single_sided_1.brd.lck  .mag_encoder_Rev3_single_sided_1.sch.lck  DESCRIPTION  eagle.epf  mag_encoder_Rev1.b#1  mag_encoder_Rev1.b#2  mag_encoder_Rev1.b#3  mag_encoder_Rev1.b#5  mag_encoder_Rev1.b#6  mag_encoder_Rev1.b#7  mag_encoder_Rev1.brd  mag_encoder_Rev1.pro  mag_encoder_Rev1.s#1  mag_encoder_Rev1.s#2  mag_encoder_Rev1.s#3  mag_encoder_Rev1.s#4  mag_encoder_Rev1.sch  mag_encoder_Rev2.b#1  mag_encoder_Rev2.brd  mag_encoder_Rev2.pro  mag_encoder_Rev2.sch  mag_encoder_Rev3_single_sided.b#1  mag_encoder_Rev3_single_sided.bot.mill.gcode  mag_encoder_Rev3_single_sided.brd  mag_encoder_Rev3_single_sided.top.drill.gcode  mag_encoder_Rev3_single_sided.top.etch.gcode  mag_encoder_Rev3_single_sided_1.b#1  mag_encoder_Rev3_single_sided_1.brd  mag_encoder_Rev3_single_sided_1.cmp  mag_encoder_Rev3_single_sided_1.sch  mag_encoder_Rev3_single_sided_1.sol  mag_encoder_Rev3_single_sided_4-up.brd
Eagle/Mainboard/: eagle.epf  mainboard.brd  mainboard.sch
Eagle/Neato/: neato.b#2  neato.b#3  neato.b#5  neato.brd  neato.drills.dri  neato.drills.xln  neato.sch  neato.toplayer.gpi
android-backend/: config.xml
android-backend/www/: index.html
benchmarking/: getset.py  run_backend.sh  run_robot.sh  setget.py
code_editor/: code_start.sh  code_stop.sh  cppcheck.cpp  cppcheck.hpp  main.cpp
code_editor_test/: Makefile  cppcheck.cpp  cppcheck.hpp  main.cpp
code_editor_test/web/: index.html  test.html
code_editor_test_local/: Makefile  code_editor
code_editor_test_local/web/: index.html
codingWorkshop/: index.html  license.txt  style.css
docs/: moose.xcf  moose_labels.odt  moose_laptop_labels.odt
docs/Create2_calibration/: front_sensors.xls
docs/DataSheets/: create2_cable.txt
encoder tests/: encoderdisk.ps  spark_encoder
encoder tests/XOR_Test/: XOR_Test.ino
encoder tests/hall_effect/: hall_effect.ino
images/: moose.xcf
include/: arduino.cpp  auth.cpp  cereal.cpp  cereal.hpp  ini.cpp  ini.h  json.cpp  json.h  location_binary.h  picosha2.h  robot.hpp  robot_config.cpp  robot_config.h  serial.cpp  serial.h  string_util.cpp  string_util.h  string_util.hpp  superstar.cpp  superstar.hpp  time_util.cpp  time_util.hpp  wget.cpp  wget.hpp
include/GL/: freeglut_ext.h  (+1 more)
ini_test/: compile.sh  main.cpp  test.ini
jpeg_video_test/: Makefile  client.cpp  forwarder.cpp  jpeg.cpp  jpeg.hpp  main.cpp  readme.txt  server.cpp  uri.cpp  webcam.cpp  webcam.hpp
layla/: sabertooth_wiring.txt
obsolete/: TODO  arduino.hpp  superstar.cpp.untracked  wordlist_old.js
quizbot/: links.txt
quizbot_quizzer/: Makefile  main.cpp  quiz.txt  reader.cpp  reader.hpp
quizbot_reader/: Makefile  compile.sh  main.cpp  questions.ini  readme.txt
rasa_iterum/: Makefile  backend.hpp  handler.hpp  http_util.hpp  rasa_iterum.cpp  string_util.hpp  time.hpp
replicator_dual/: miracle.json
roomba_driver/: roomba.h  roomba_driver.ino
roomba_driver_serial/: roomba_driver_serial.ino
roomba_sensors/: roomba_sensors.ino
roomba_testing/: Makefile  compile.sh  main.cpp
sensors/sound_localize/software/: CMakeLists.txt  References  References~  Research.txt  Sound_Interface.cpp  Sound_Interface.py
sensors/sound_localize/software/Microphone_Arduino/: Microphone_Arduino.ino
serial_testing/: a.out  mactest.cpp  serial.cpp  serial.hpp  test.cpp
stunserver/: stuntestcode
subsystems/: install_deps_ubuntu.sh
subsystems/kinect_localize/: CMakeLists.txt  Makefile  Sound_Localize_Kinect.cpp
subsystems/kinect_localize/include/: Kinect_DOA.h  Shader.h  auth.hpp  ini.h  jsoncpp  mongoose  picosha2.h  robot.hpp  robot_config.h  skeltrack  skeltrack_helper.h  string_util.h  string_util.hpp  superstar  superstar.hpp  wget.hpp  xcor_td.h
subsystems/kinect_localize/shaders/: transformations.frag  transformations.vs
subsystems/kinect_localize/src/: Kinect_DOA.cpp  Kinect_DOA.h  LPF.cpp  Sound_Localize_Kinect.cpp  ini.cpp  robot_config.cpp  skeltrack_helper.h  string_util.cpp  superstar.cpp  xcor_td.cpp
superstar/: Makefile  README  delete_robot.sh  netbench.cpp  superstar.cpp
superstarv2/: Makefile  README.md  spec.md  superstar
sysadmin/: update_git.sh
tabula_rasa/: Makefile  README.txt  backend.cpp  compile.sh  config.ini  config.txt  tester  tester.cpp
webrtc/: INSTALL_NODEJS_STUFF.sh  how_to_install_simplewebrtc.txt  index.html  server.js  simplewebrtc.js
www/: body.html  codetest.html  footer.html  header.html  index.html  members.html  navbar.html  sources.html  test.html  test3.html  updates.html
(+894 files in other folders)
